# signals

./: .clang-format  .codecov.yml  .dockerignore  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  codecov.yml  signals.pro
.circleci/: config.yml
.cmake/: CodeCoverage.cmake
.docker/: Dockerfile.fedora
.github/workflows/: build-linux.yml  build.yml
cmake/: PajladaSignalsConfig.cmake.in
examples/: IncludePajladaSignals.cmake
examples/simple/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt
include/pajlada/: signals.hpp
include/pajlada/signals/: connection.hpp  scoped-connection.hpp  signal.hpp  signalholder.hpp
scripts/: README.md  docker-build.sh  docker-example.sh  docker-test.sh  run-example.sh  run-test.sh
src/: connection.cpp  main.cpp  scoped-connection.cpp  self-disconnecting-signal.cpp  signal-holder.cpp  signal.cpp  signalholder.cpp
tests/: CMakeLists.txt
tests/src/: bolt-signal.cpp  connection.cpp  scoped-connection.cpp  self-disconnecting-signal.cpp  signal.cpp
